Quorum3/Library/Tests/Actions/Fail/MissingAction.quorum
class Main
    action Main
        A a
        boolean x = 0 < a:DoThing() + 1
    end
end